--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Git\\Project\\Java\\library\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Git\\Project\\Java\\library\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mysql-connector-j-8.0.33.jar=D:\\Git\\Project\\Java\\library\\mysql-connector-j-8.0.33.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=libs\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,9 +40,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +69,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
