--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,10 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.activation-1.1__1_.jar=D:\\PRJ301_FALL\\thu vien\\activation-1.1 (1).jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\PRJ301_FALL\\thu vien\\javax.mail.jar
 file.reference.mysql-connector-java-8.0.17.jar=libs\\mysql-connector-java-8.0.17.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +42,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.activation-1.1__1_.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
