--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.jar=D:\\PRJ301_FALL\\thu vien\\activation-1.1.jar
 file.reference.activation-1.1__1_.jar=D:\\PRJ301_FALL\\thu vien\\activation-1.1 (1).jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=D:\\PRJ301_FALL\\thu vien\\javax.mail.jar
+file.reference.javax.mail.jar-1=D:\\PRJ301_FALL\\thu vien\\javax.mail.jar
 file.reference.mysql-connector-java-8.0.17.jar=libs\\mysql-connector-java-8.0.17.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +47,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.activation-1.1__1_.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.activation-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
