--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.activation-1.1__1_.jar=D:\\Git\\Project\\Project_Management_System\\libs\\activation-1.1 (1).jar
-file.reference.javax.mail.jar=D:\\Git\\Project\\Project_Management_System\\libs\\javax.mail.jar
+deploy.ant.properties.file=C:\\Users\\kelma\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
