--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.jar=D:\\PRJ301_FALL\\thu vien\\activation-1.1.jar
+file.reference.activation-1.1.jar-1=libs/activation-1.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=libs/javax.mail.jar
@@ -45,7 +45,7 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.activation-1.1.jar}
+    ${file.reference.activation-1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
