--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar-1=libs/activation-1.1.jar
-file.reference.gson-2.8.2.jar=D:\\PRJ301_FALL\\thu vien\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=libs\\gson-2.8.2.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=libs/javax.mail.jar
@@ -47,7 +47,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.activation-1.1.jar-1}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
