--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,13 @@ endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar-1=libs/activation-1.1.jar
 file.reference.gson-2.8.2.jar-1=libs\\gson-2.8.2.jar
+file.reference.hamcrest-core-1.3.jar=libs/hamcrest-core-1.3.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=libs/javax.mail.jar
+file.reference.junit-4.13.2.jar=libs\\junit-4.13.2.jar
 file.reference.mysql-connector-java-8.0.17.jar=libs\\mysql-connector-java-8.0.17.jar
+file.reference.opentest4j-1.2.0.jar=libs\\opentest4j-1.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -64,7 +67,11 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.opentest4j-1.2.0.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
